# release-playground

./: .pre-commit-config.yaml  .release-it.js  CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  renovate.json
.github/workflows/: release.yaml
